# libgimbal

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md
lib/: CMakeLists.txt
lib/api/gimbal/: gimbal.h  gimbal_algorithms.h  gimbal_allocators.h  gimbal_api.h  gimbal_api.hpp  gimbal_build.h  gimbal_cmdline_parser.h  gimbal_compiler.h  gimbal_config.h  gimbal_config.h.in  gimbal_container.h  gimbal_container.hpp  gimbal_containers.h  gimbal_context.h  gimbal_context.hpp  gimbal_core.h  gimbal_ext.h  gimbal_generator.h  gimbal_generics.hpp  gimbal_handle.h  gimbal_handle.hpp  gimbal_macros.h  gimbal_macros_map.h  gimbal_macros_utils.h  gimbal_meta.h  gimbal_object.h  gimbal_object.hpp  gimbal_os.h  gimbal_preprocessor.h  gimbal_result.h  gimbal_string.h  gimbal_string.hpp  gimbal_strings.h  gimbal_table.h  gimbal_test.h  gimbal_types.h  gimbal_types.hpp  gimbal_utils.h  gimbal_variant.h  gimbal_variant.hpp  (+1 more)
lib/lib/jenkins/: lookup3.c
lib/lib/tinycthread/: CMakeLists.txt
lib/source/: gimbal_buffer.c  gimbal_context.c  gimbal_context_object.c  gimbal_ext.c  gimbal_generics.cpp  gimbal_handle.c  gimbal_hash_set.c  gimbal_hashset.c  gimbal_ibuffer.c  gimbal_ievent_filter.c  gimbal_ievent_handler.c  gimbal_itable.c  gimbal_ivariant.c  gimbal_meta.c  gimbal_object.c  gimbal_property.c  gimbal_quark.c  gimbal_state.c  gimbal_thread.c  gimbal_tree_set.c  gimbal_type.c  gimbal_value_types.c  gimbal_variant.c  gimbal_version.c
lib/source/algorithms/: gimbal_compression.c  gimbal_hash.c  gimbal_md5.c  gimbal_numeric.c  gimbal_random.c  gimbal_sha1.c  gimbal_sort.c
lib/source/allocators/: gimbal_allocation_tracker.c  gimbal_arena_allocator.c  gimbal_pool_allocator.c  gimbal_scope_allocator.c
lib/source/containers/: gimbal_array_deque.c  gimbal_array_heap.c  gimbal_array_list.c  gimbal_array_map.c  gimbal_bit_view.c  gimbal_byte_array.c  gimbal_doubly_linked_list.c  gimbal_hash_set.c  gimbal_linked_list.c  gimbal_nary_tree.c  gimbal_ring_buffer.c  gimbal_ring_list.c  gimbal_tree_set.c  gimbal_vector.c
lib/source/core/: gimbal_app.c  gimbal_application.c  gimbal_call_stack.c  gimbal_error.c  gimbal_exception.c  gimbal_ext.c  gimbal_library.c  gimbal_logger.c  gimbal_main_loop.c  gimbal_module.c  gimbal_ref.c  gimbal_thd.c  gimbal_thread.c  gimbal_version.c
lib/source/ifaces/: gimbal_iallocator.c  gimbal_ievent_filter.c  gimbal_ievent_handler.c  gimbal_ilogger.c  gimbal_iplugin.c  gimbal_itable.c  gimbal_ivariant.c
lib/source/meta/: gimbal_boxed.c  gimbal_c_closure.c  gimbal_class.c  gimbal_class_closure.c  gimbal_closure.c  gimbal_enum.c  gimbal_flags.c  gimbal_instance.c  gimbal_interface.c  gimbal_pointer.c  gimbal_primitives.c  gimbal_record.c  gimbal_signal.c  gimbal_signal_closure.c  gimbal_type.c  gimbal_type_.h  gimbal_value_types.c
lib/source/meta2/: gimbal_object.c
lib/source/objects/: gimbal_context.c  gimbal_event.c  gimbal_module.c  gimbal_object.c  gimbal_property.c
lib/source/platform/: gimbal_time_.c
lib/source/strings/: gimbal_pattern.c  gimbal_pattern.cpp  gimbal_quark.c  gimbal_string.c  gimbal_string_buffer.c  gimbal_string_list.c  gimbal_string_pattern.c  gimbal_string_ref.c  gimbal_string_view.c
lib/source/test/: gimbal_allocation_tracker.c  gimbal_test_scenario.c  gimbal_test_suite.c
lib/source/types/: gimbal_buffer.c  gimbal_closure.c  gimbal_marshal.c  gimbal_quark.c  gimbal_ref.c  gimbal_uuid.c  gimbal_variant.c  gimbal_version.c
lib/source/utils/: gimbal_arena_allocator.c  gimbal_bit_view.c  gimbal_byte_array.c  gimbal_cmd_parser.c  gimbal_date_time.c  gimbal_option_group.c  gimbal_pool_allocator.c  gimbal_ref.c  gimbal_scanner.c  gimbal_settings.c  gimbal_test_scenario.c  gimbal_test_suite.c  gimbal_timer.c  gimbal_uri.c  gimbal_uuid.c  gimbal_version.c
test/: CMakeLists.txt  test_main.cpp  variant_tests.hpp
test/include/: gimbal_tests.h  test_gimbal.hpp  test_gimbal_api.hpp  test_gimbal_array_map.h  test_gimbal_array_map.hpp  test_gimbal_buffer.hpp  test_gimbal_byte_array.hpp  test_gimbal_closure.h  test_gimbal_closure.hpp  test_gimbal_context.hpp  test_gimbal_hash.hpp  test_gimbal_hash_map.hpp  test_gimbal_hashmap.hpp  test_gimbal_linked_list.h  test_gimbal_meta.hpp  test_gimbal_object.hpp  test_gimbal_quark.hpp  test_gimbal_ref.h  test_gimbal_ref.hpp  test_gimbal_string.hpp  test_gimbal_tree_set.h  test_gimbal_type.h  test_gimbal_type.hpp  test_gimbal_variant.h  test_gimbal_variant.hpp  test_gimbal_vector.hpp  variant_tests.hpp
test/include/algorithms/: gimbal_compression_test_suite.h  gimbal_hash_test_suite.h  gimbal_md5_test_suite.h  gimbal_random_test_suite.h  gimbal_sha1_test_suite.h  gimbal_sort_test_suite.h  test_gimbal_algorithms.hpp
test/include/allocators/: gimbal_arena_allocator_test_suite.h  gimbal_pool_allocator_test_suite.h  gimbal_scope_allocator_test_suite.h
test/include/containers/: gimbal_array_deque_test_suite.h  gimbal_array_heap_test_suite.h  gimbal_array_list_test_suite.h  gimbal_array_map_test_suite.h  gimbal_byte_array_test_suite.h  gimbal_doubly_linked_list_test_suite.h  gimbal_hash_set_test_suite.h  gimbal_linked_list_test_suite.h  gimbal_nary_tree_test_suite.h  gimbal_ring_buffer_test_suite.h  gimbal_ring_list_test_suite.h  gimbal_tree_set_test_suite.h  gimbal_vector_test_suite.h  test_gimbal_byte_array.h  test_gimbal_byte_array.hpp  test_gimbal_doubly_linked_list.h  test_gimbal_doubly_linked_list.hpp  test_gimbal_hash_map.hpp  test_gimbal_linked_list.hpp  test_gimbal_tree_set.hpp  test_gimbal_vector.hpp
test/include/core/: gimbal_ref_test_suite.h  (+4 more)
test/source/: gimbal_test_cpp.cpp  gimbal_test_main.c  gimbal_tests.c  test_gimbal_array_map.c  test_gimbal_boxed.c  test_gimbal_byte_array.cpp  test_gimbal_closure.c  test_gimbal_enum.c  test_gimbal_flags.c  test_gimbal_linked_list.c  test_gimbal_object.cpp  test_gimbal_opaque.c  test_gimbal_ref.c  test_gimbal_string.cpp  test_gimbal_string_ref.c  test_gimbal_string_view.c  test_gimbal_tree_set.c  test_gimbal_type.c  test_gimbal_type.cpp  test_gimbal_variant.c  test_main.c  test_main.cpp
(+536 files in other folders)
